# unit_testing_lab

./: README.md  makefile  pyproject.toml
migrations/: 20220806_init_student.sql
tests/categorizing/: README.md  conftest.py  test_categorizing.py
tests/hypothesis_test/: README.md  conftest.py  test_multiplexer.py
tests/mocking_aws/: README.md  conftest.py  test_s3_user.py
tests/mocking_aws/fixtures/: aws.py
tests/mocking_class/: README.md  conftest.py  test_randomizer.py
tests/mocking_class/fixtures/: randomizer.py
tests/mocking_db/: README.md  conftest.py  test_postgres_user.py
tests/mocking_db/fixtures/: postgres.py
tests/multiple_cpus/: README.md  test_multiple_cpus.py
unit_testing_lab/: multiplexer.py  postgres_user.py  randomizer.py  s3_user.py
