[tool.poetry]
name = "unit-testing-lab"
version = "0.1.0"
description = ""
authors = ["Rain Wu <rain.wu@appier.com>"]
readme = "README.md"
packages = [{include = "unit_testing_lab"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pytest-xdist = "^2.5.0"
moto = "^3.1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
src_paths = ['tests']

[tool.pytest.ini_options]
minversion = '7.0'
testpaths = [
    "tests",
]

# Categorizing
# log_cli = 1
# log_cli_level = 'INFO'
# log_cli_format = '%(levelname)-8s | %(message)s (%(filename)s:%(lineno)s)'
# markers = [
#     "pre_commit: test cases to run while pre-commit hook is triggered.",
#     "ci: test cases to be collected during continuous integration.",
#     "benchmark: test cases for performance benchmarking.",
#     "integration(dependency): integration test cases (with external dependencies).",
# ]

# Multiple CPUs
# addopts = "-n auto"